@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2007,v 1.1286 2007/06/09 14:12:58 taca Exp $
+$NetBSD: CHANGES-2007,v 1.1287 2007/06/09 19:27:15 jdolecek Exp $
 
 Changes to the packages collection and infrastructure in 2007:
 
@@ -2498,3 +2498,5 @@ Changes to the packages collection and infrastructure in 2007:
 	Updated x11/lablgtk2 to 2.6.0nb12 [wiz 2007-06-09]
 	Updated x11/ruby-gtk to 0.34nb8 [taca 2007-06-09]
 	Updated www/opera to 9.21 [jdolecek 2007-06-09]
+	Updated www/opera to 9.21 [jdolecek 2007-06-09]
+	Updated devel/p5-AppConfig to 1.65 [abs 2007-06-09]
